--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,23 @@ section .sky .cloud2 {
     top: 20px;
     left: 0%;
 }
+
+section .town .circle {
+    position: absolute;
+    bottom: 104px;
+    left: 50%;
+    margin-left: -165px;
+    opacity: 0.7;
+}
+
+section .town .night {
+    position: absolute;
+    bottom: 0px;
+    left: 40px;
+}
+
+section .town .day {
+    position: absolute;
+    bottom: 0px;
+    left: 40px;
+}
