--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    background: #b1e1e2;
+    animation: sky linear 20s infinite;
 }
 
 section {
@@ -22,7 +22,6 @@ section {
     left: 50%;
     margin-top: -200px;
     margin-left: -500px;
-    border: 1px solid red;
 }
 
 section .sky {
@@ -38,7 +37,8 @@ section .sky .sun {
     left: 50%;
     margin-left: -100px;
     top: -150px;
-    transform-origin: center 500px ;
+    transform-origin: center 500px;
+    animation: sun linear 20s infinite;
 }
 
 section .sky .cloud1 {
@@ -59,6 +59,7 @@ section .town .circle {
     left: 50%;
     margin-left: -165px;
     opacity: 0.7;
+    animation: rotation linear 20s infinite;
 }
 
 section .town .night {
@@ -71,4 +72,73 @@ section .town .day {
     position: absolute;
     bottom: 0px;
     left: 40px;
+    animation: day linear 20s infinite;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes sun {
+    0% {
+        transform: rotate(-90deg);
+        opacity: 0;
+    }
+    25% {
+        transform: rotate(-30deg);
+        opacity: 1;
+    }
+    50% {
+        transform: rotate(30deg);
+        opacity: 1;
+    }
+    75% {
+        transform: rotate(90deg);
+        opacity: 0;
+    }
+    100% {
+        transform: rotate(-90deg);
+        opacity: 0;
+    }
+}
+
+@keyframes sky {
+    0% {
+        background: #b08fcc;
+    }
+    25% {
+        background: #b1e1e2;
+    }
+    50% {
+        background: #fcd2e2;
+    }
+    75% {
+        background: #636888;
+    }
+    100% {
+        background: #b08fcc;
+    }
+}
+
+@keyframes day {
+    0% {
+        opacity: 0;
+    }
+    25% {
+        opacity: 1;
+    }
+    50% {
+        opacity: 1;
+    }
+    75% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
 }
