--- a/css/style.css
+++ b/css/style.css
@@ -45,12 +45,22 @@ section .sky .cloud1 {
     position: absolute;
     top: -30px;
     left: 10%;
+    animation: flow linear 10s infinite;
 }
 
 section .sky .cloud2 {
     position: absolute;
     top: 20px;
     left: 0%;
+    animation: flow linear 20s infinite;
+}
+
+section .sky .airplane {
+    position: absolute;
+    top: -100px;
+    right: 0%;
+    width: 120px;
+    animation: reflow linear 20s infinite;
 }
 
 section .town .circle {
@@ -73,6 +83,29 @@ section .town .day {
     bottom: 0px;
     left: 40px;
     animation: day linear 20s infinite;
+}
+
+section .people {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    animation: day linear 20s infinite;
+}
+
+section .people .man {
+    position: absolute;
+    left: 0%;
+    bottom: 0px;
+    animation: flow linear 7s infinite;
+}
+
+section .people .family {
+    position: absolute;
+    left: 0%;
+    bottom: 0px;
+    animation: flow linear 20s infinite;
 }
 
 @keyframes rotation {
@@ -142,3 +175,18 @@ section .town .day {
         opacity: 0;
     }
 }
+
+@keyframes flow {
+    0% {left: 0%; opacity: 0;}
+    10% {opacity: 1;}
+    80% {opacity: 1;}
+    100% {left: 90%; opacity: 0;}
+}
+
+@Keyframes reflow {
+    0% {right: 0%; opacity: 0;}
+    10% {opacity: 1;}
+    80% {opacity: 1;}
+    100% {right: 90%; opacity: 0;}
+}
+
